openshift/base/amq-ossm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/guignome/amq-ossm.git
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"amq-ossm:latest","namespace":"test-application"},"fieldPath":"spec.template.spec.containers[?(@.name==\"amq-ossm\")].image","pause":"false"}]'
    isFromDevfile: "true"
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: amq-ossm
    app.kubernetes.io/component: amq-ossm
    app.kubernetes.io/instance: amq-ossm
    app.kubernetes.io/name: amq-ossm
    app.kubernetes.io/part-of: amq-ossm
    app.openshift.io/runtime: amq-ossm
  name: amq-ossm
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: amq-ossm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: amq-ossm
        deployment: amq-ossm
    spec:
      containers:
      - env:
        - name: DEBUG_PORT
          value: "5858"
        - name: PROJECTS_ROOT
          value: /projects
        - name: PROJECT_SOURCE
          value: /projects
        image: image-registry.openshift-image-registry.svc:5000/test-application/amq-ossm@sha256:a731a24455b18493bc95f7e8c0bff82a32780c8605d82786df1b3fc394c53a8b
        imagePullPolicy: Always
        name: amq-ossm
        ports:
        - containerPort: 8080
          name: http-quarkus
          protocol: TCP
        - containerPort: 5858
          name: debug
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
