openshift/base/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/guignome/amq-ossm.git
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"amq-ossm:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"consumer\")].image"}]'
    isFromDevfile: "true"
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: consumer
    app.kubernetes.io/component: amq-ossm
    app.kubernetes.io/instance: consumer
    app.kubernetes.io/name: consumer
    app.kubernetes.io/part-of: amq-ossm
    app.openshift.io/runtime: amq-ossm
  name: consumer
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: consumer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: consumer
        version: v1
        deployment: consumer
      annotations:
        sidecar.istio.io/inject: "true"
        #proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
    spec:
      containers:
      - env:
        - name: DEBUG_PORT
          value: "5858"
        - name: PROJECTS_ROOT
          value: /projects
        - name: PROJECT_SOURCE
          value: /projects
        - name: QUARKUS_ARTEMIS_URL
          value: tcp://artemis-hdls-svc:61616
        - name: DEMO_CONSUMER
          value: "true"
        - name: START_DELAY
          value: '5000'
        image: amq-ossm:latest
        imagePullPolicy: Always
        name: consumer
        ports:
        - containerPort: 8080
          name: http-quarkus
          protocol: TCP
        - containerPort: 5858
          name: debug
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
