openshift/base/amq-ossm-producer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/guignome/amq-ossm.git
    isFromDevfile: "true"
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: amq-ossm
    app.kubernetes.io/component: amq-ossm-producer
    app.kubernetes.io/instance: amq-ossm-producer
    app.kubernetes.io/name: amq-ossm-producer
    app.kubernetes.io/part-of: amq-ossm
    app.openshift.io/runtime: amq-ossm-producer
  name: amq-ossm-producer
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-quarkus
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: amq-ossm-producer
    deployment: amq-ossm-producer
  sessionAffinity: None
  type: ClusterIP
