openshift/base/consumer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/guignome/amq-ossm.git
    isFromDevfile: "true"
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: consumer
    app.kubernetes.io/component: consumer
    app.kubernetes.io/instance: consumer
    app.kubernetes.io/name: consumer
    app.kubernetes.io/part-of: amq-ossm
    app.openshift.io/runtime: consumer
  name: consumer
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-quarkus
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: consumer
    deployment: consumer
  sessionAffinity: None
  type: ClusterIP
