openshift/base/amq-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: tls-amq
spec:
  host: artemis-hdls-svc
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
