openshift/base/amq-ping-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: amq-ping
spec:
  hosts:
  - artemis-ping-svc
  location: MESH_INTERNAL
  ports:
  - number: 61616
    name: core
    protocol: TCP
  resolution: DNS
