openshift/base/amq-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: amq
spec:
  hosts:
  - artemis-ss-0
  location: MESH_INTERNAL
  ports:
  - number: 61616
    name: core
    protocol: TCP
  resolution: DNS
