openshift/base/producer-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: producer
spec:
  gateways:
  - ingress-gateway
  hosts:
  - 'article'
  http:
  - match:
    - uri:
        prefix: /hub-devint4/ses-service-v1/ses/
    rewrite:
      uri: /
    route:
    - destination:
        host: producer
        port:
          number: 8080
